
 /**
 * Karpenter - The Joomla Template Framewwork
 * @package 	Karpenter
 * @copyright 	(C) 2011 Kontent Design. All rights reserved.
 * @license 	http://www.gnu.org/copyleft/gpl.html GNU/GPL
 * @link 		http://extensions.kontentdesign.com
 **/
?>
<!--

Changelog
------------

Legend:

* -> Security Fix
# -> Bug Fix
+ -> Addition
^ -> Change
- -> Removed
! -> Note

-------------

18-Jul-2011 Severdia
- Removed unneccesary files (unminified versions)
- Updated setup file

6-Jul-2011 Severdia
# Fixed language file issues for params
# Fixed only loading Blueprint CSS file for Joomla menu if BP loads
# Fixed parameters for loading custom CSS & JS files
- Removed/moved loading of MooTools More to param
^ Moved JS file for noConflict to only load when both JS frameworks load
# Fixed media type on CSS files